--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
 	</head>
 	<body class="banner">
 		<div id="app"></div>
-		<script type="module" src="./src/index.jsx"></script>
+		<script type="module" src="./src/index.jsx" prerender></script>
 	</body>
 </html>
