refactor: Metadata galore

--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Preact CLI</title>
+		<link rel="icon" href="/favicon.ico">
+		<title>Preact</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
-		<meta name="color-scheme" content="dark light" />
+		<meta name="color-scheme" content="dark light">
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-touch-icon" content="/assets/app-icon.png" sizes="512x512">
-		<meta name="description" content="Preact is a fast 3kB alternative to React with the same modern API.">
-		<link rel="alternate" type="application/rss+xml" href="https://preactjs.com/feed.xml" />
-		<link rel="alternate" type="application/atom+xml" href="https://preactjs.com/feed.atom" />
-		<meta name="twitter:card" content="summary" />
-		<meta property="og:url" content="https://preactjs.com<%= cli.url %>" />
-		<meta property="og:title" content="<%= cli.title %>" />
-		<meta property="og:description" content="<%= cli.CLI_DATA.prerenderData?.description %>" />
-		<meta property="og:image" content="https://preactjs.com/assets/app-icon.png" />
+		<meta name="apple-touch-icon" content="/app-icon.png" sizes="512x512">
+		<link rel="manifest" href="/manifest.webmanifest">
+		<meta name="theme-color" content="#673AB8">
+		<link rel="alternate" type="application/rss+xml" href="https://preactjs.com/feed.xml">
+		<link rel="alternate" type="application/atom+xml" href="https://preactjs.com/feed.atom">
+		<meta name="twitter:card" content="summary">
+		<link href="https://cdn.jsdelivr.net" rel="preconnect" crossorigin="anonymous">
 	</head>
 	<body class="banner">
 		<div id="app"></div>
